--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <img src="./assets/github.png"
                 alt="My Github Profile"
                 class="icon"
-                onclick="location.href='httpps://github.com/yusufdilberr'">
+                onclick="location.href='https://github.com/yusufdilberr'">
             </div>
 
         </div>
