--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p class="section__text__p2">Junior Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2"
-                onclick="window.open('./assets/Yusuf_Eren_DİLBER_CV...pdf')">
+                onclick="window.open('./assets/Yusuf_Eren_DİLBER_CV,,.pdf')">
                 Download CV
                 </button>
 
